# transformer-checker

./: .gitignore  experiments.ipynb  pyproject.toml
.github/workflows/: publish.yaml
dataset/: dataset.py
docs/: LICENSE  Main.tex  biblio.bib  config.tex  tesis.tex
docs/main/: 1-cover.tex  1-portada.tex  2-declaracion_autoria.tex  2-declaration.tex  3-acknowledgements.tex  3-dedicatoria_agradecimientos.tex  4-abstract.tex  5-key-words.tex  5-palabras_clave.tex  6-content.tex  7-anexos.tex  7-annexes.tex
docs/main/anexos/: anexo_1.tex  anexo_2.tex
docs/main/annexes/: class_diagram.tex  tokenizer_impl.tex
docs/main/content/: chapter-1.tex  chapter-2.tex  chapter-3.tex  chapter-4.tex  chapter-5.tex  chapter-6.tex  intro.tex
dyck_k_generator/: checker.py  generator.py
notebooks/: experiments.ipynb
transformer/: dataset.py  hooked_transformer.py  transformer.py
transformer_checker/: __init__.py
transformer_checker/dyck_k_generator/: generator.py
transformer_viz/: visualizer.py
