[tool.poetry]
name = "transformer-checker"
version = "0.1.0"
description = "tool to visualize and check neural activations and attention patterns in transformer models that classify context-free languages"
authors = ["Matias Molinolo <mm231323@fi365.ort.edu.uy>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
tqdm = "^4.66.4"
transformer-lens = "^1.17.0"
torch = "^2.3.0"
ipykernel = "^6.29.4"
bertviz = "^1.4.0"
ipywidgets = "^8.1.2"
jupyter = "^1.0.0"
huggingface-hub = "^0.23.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
